[project]
name = "glassbox-vision-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "flax>=0.12.7",
    "google-tunix>=0.1.6",
    "jax>=0.10.1",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optax>=0.2.8",
    "pillow>=12.2.0",
    "tensorboardx>=2.6.5",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
    "transforms>=0.2.1",
]
